# FOcrew

./: .env.example  .gitattributes  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
Agents/: AgentEnums.py  AgentProviderFactory.py
Agents/AgentProvider/: BaseAgent.py  __init__.py  content_agent.py  marketing_agent.py  swot_agent.py  translation_agent.py
Beam/: Generationmodel.py  README.md  model.py  request_model.py  requirements.txt  test_model.py
Beam/Enums/: ModelEnum.py
Dataset/: Sales.xlsx  Sample.csv
Frontend/: App.tsx  README.md  app.py  index.html  metadata.json  package-lock.json  package.json  requirements.txt  types.ts
Frontend/components/: AnalysisSection.tsx  ProjectHeader.tsx  ReportViewer.tsx  UploadSection.tsx
Frontend/pages/: 1_📄_Report_Markdown.py  2_📈_Charts_and_Tables.py  3_🧩_HTML_Dashboard.py
Frontend/services/: apiService.ts
docker/: .gitignore  README.md  docker-compose.yml
docker/FOcrew/: Dockerfile  alembic.ini.example  entrypoint.sh
docker/envs/: .env.example.app  .env.example.grafana  .env.example.postgres  .env.example.postgres-exporter
docker/nginx/: default.conf
docker/prometheus/: prometheus.yml
docs/: project_name.txt
frontend/: Dockerfile  package.json
helpers/: config.py
models/: GeminiModel.py  Model.py  ProviderLLM.py
routes/: AgentRouterEnums
src/: .env.example  .gitignore  clean_script.py  final_report.md  main.py  requirements.txt  trainingRLCrew.py
src/Agents/: AgentEnums.py  (+2 more)
tests/: test_health.py
tools/: FileReading.py  VisualizationTool.py
(+5760 files in other folders)
